fix styling on subscribe spacing

--- a/app/assets/stylesheets/channel.scss
+++ b/app/assets/stylesheets/channel.scss
@@ -28,8 +28,9 @@
 
 .channel-header .profile-image {
   border-radius: 50%;
-  width: 80px;
   height: 80px;
+  max-width: 80px;
+  min-width: 80px;
   overflow: hidden;
   background: white;
   display: flex;
@@ -50,6 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 
 .channel-channel-name {
@@ -62,4 +64,9 @@
 .channel-subscriber-count {
   color: #6e6e6e;
   font-size: 14px;
+}
+
+.channel-subscribe-button-container {
+  display: flex;
+  align-items: center;
 }
